pcl6: Fix mismatching allocation and deallocation

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>
Ticket: #12835