src/add-ons/print/drivers/pcl6/DeltaRowCompression.cpp
@@ -26,7 +26,7 @@ AbstractDeltaRowCompressor::AbstractDeltaRowCompressor(int rowSize,
 
 AbstractDeltaRowCompressor::~AbstractDeltaRowCompressor()
 {
-	delete fSeedRow;
+	delete[] fSeedRow;
 	fSeedRow = NULL;
 }
 
